// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Azure Key Vault Example renders the Example Azure Key Vault and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_key_vault.kv_key_vault_6CCDEEF8.id}"
    },
    "key_vault_name": {
      "value": "\${azurerm_key_vault.kv_key_vault_6CCDEEF8.name}"
    },
    "resource_group_name": {
      "value": "\${azurerm_resource_group.rg.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_key_vault": {
      "kv_key_vault_6CCDEEF8": {
        "location": "eastus",
        "name": "kv-test",
        "network_acls": {
          "bypass": "AzureServices",
          "default_action": "Allow"
        },
        "purge_protection_enabled": true,
        "resource_group_name": "\${azurerm_resource_group.rg.name}",
        "sku_name": "standard",
        "soft_delete_retention_days": 7,
        "tenant_id": "24e2975c-af72-454e-8dc0-579d886a1589"
      }
    },
    "azurerm_resource_group": {
      "rg": {
        "location": "eastus",
        "name": "rg-test"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;

exports[`Azure Key Vault With Defaults renders an Azure Key Vault with defaults and checks snapshot 1`] = `
"{
  "output": {
    "id": {
      "value": "\${azurerm_key_vault.testAzureKeyVaultDefaults_key_vault_A0C09326.id}"
    },
    "key_vault_name": {
      "value": "\${azurerm_key_vault.testAzureKeyVaultDefaults_key_vault_A0C09326.name}"
    }
  },
  "provider": {
    "azurerm": [
      {
        "features": {
        }
      }
    ]
  },
  "resource": {
    "azurerm_key_vault": {
      "testAzureKeyVaultDefaults_key_vault_A0C09326": {
        "location": "eastus",
        "name": "kv-test",
        "purge_protection_enabled": true,
        "resource_group_name": "rg-test",
        "sku_name": "standard",
        "soft_delete_retention_days": 90,
        "tenant_id": "123e4567-e89b-12d3-a456-426614174000"
      }
    }
  },
  "terraform": {
    "required_providers": {
      "azurerm": {
        "source": "azurerm",
        "version": "3.66.0"
      }
    }
  }
}"
`;
